--- a/app/src/main/res/layout/visualiza_noticias.xml
+++ b/app/src/main/res/layout/visualiza_noticias.xml
@@ -2,11 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/visualiza_noticias"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/activity_visualiza_noticia_titulo"
+        android:id="@+id/visualiza_noticia_titulo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -17,14 +18,14 @@
         tools:text="@tools:sample/lorem" />
 
     <TextView
-        android:id="@+id/activity_visualiza_noticia_texto"
+        android:id="@+id/visualiza_noticia_texto"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@id/activity_visualiza_noticia_titulo"
-        app:layout_constraintStart_toStartOf="@id/activity_visualiza_noticia_titulo"
-        app:layout_constraintTop_toBottomOf="@id/activity_visualiza_noticia_titulo"
+        app:layout_constraintEnd_toEndOf="@id/visualiza_noticia_titulo"
+        app:layout_constraintStart_toStartOf="@id/visualiza_noticia_titulo"
+        app:layout_constraintTop_toBottomOf="@id/visualiza_noticia_titulo"
         tools:text="@tools:sample/lorem" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
